--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,11 @@
     "Robert Manolea <r.manolea@expandjs.com>"
   ],
   "keywords": [
+    "material design",
+    "material menu",
+    "web app",
+    "html5",
+    "expandjs",
     "web-components"
   ],
   "main": [
